--- a/bitcamp-project-server/src/main/webapp/index.html
+++ b/bitcamp-project-server/src/main/webapp/index.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="member/list">회원</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="auth/loginForm">로그인</a>
+        <a class="nav-link" href="auth/login">로그인</a>
       </li>
     </ul>
   </div>
